add likedIn link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li>HOME</li>
                 <li>WIKI</li>
                 <li>GITHUB</li>
-                <li>LINKEDIN</li>
+                <li><a href="https://www.linkedin.com/in/jakub-rul%C3%ADk-2778451a2/">LINKEDIN</a></li>
             </ul>
         </nav>
         
