--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <nav> <ul>
                 <li>HOME</li>
-                <li>WIKI</li>
-                <li>GITHUB</li>
+                <li><a href="https://www.wikipedia.org/">Wiki</a></li>
+                <li><a href="https://github.com/green-fox-academy/Rubi">GITHUB</a></li>
                 <li><a href="https://www.linkedin.com/in/jakub-rul%C3%ADk-2778451a2/">LINKEDIN</a></li>
             </ul>
         </nav>
