minor link update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                <img src="assets/aperture.svg">
             </div>
             <nav> <ul>
-                <li>HOME</li>
+                <li><a href="https://rurikovec.github.io/Rubi-FirstWebPage/">HOME</a></li>
                 <li><a href="https://www.wikipedia.org/">Wiki</a></li>
                 <li><a href="https://github.com/green-fox-academy/Rubi">GITHUB</a></li>
                 <li><a href="https://www.linkedin.com/in/jakub-rul%C3%ADk-2778451a2/">LINKEDIN</a></li>
