--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <main>
 
- <h1>Jakub Rubi Rulík</h1>
+ <h1>Jakub "Rubi Rulík</h1>
 
  <h2>Student at Green Fox Academy</h2>   
 <p id="whatIam">I am what I am and it doesn´t metter who I was before</p>
